training/bogus-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  # creationTimestamp: ""
  labels:
    run: mysql
  name: mysql
spec:
  containers:
    - image: mysql
      name: mysql
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
