training/Ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
  annotations:
    # these prevent too many redirects error
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path:  /wear
          pathType: Prefix
          backend:
            service:
              name: wear-service
              port: 
                number: 80
        - path:  /watch
          pathType: Prefix
          backend:
            service:
              name: watch-service
              port: 
                number: 80
